--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,6 +22,9 @@ spring.datasource.password=Ae25SeE8
 spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+eapp.entitymanager.packagesToScan:com.emirci.envanter
+
+
 # ===============================
 # = Thymeleaf configurations
 # ===============================
@@ -37,9 +40,11 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 # ===============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+entitymanager.packagesToScan:com
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder
 # ==============================================================
