--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,6 @@
 server.port=7999
 app.name=Envanter Uygulaması
-spring.main.banner-mode=log
-#server.jsp-servlet.class-name=org.springframework.web.servlet.DispatcherServlet
-#server.jsp-servlet.init-parameters.*=
-#server.jsp-servlet.registered=true
+spring.main.banner-mode=console
 # ===============================
 # = MVC
 # ===============================
@@ -16,15 +13,21 @@ spring.mvc.favicon.enabled=true
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url=jdbc:sqlserver://172.16.101.36;databaseName=OTS
-spring.datasource.username=OTS
-spring.datasource.password=Ae25SeE8
-spring.datasource.tomcat.test-while-idle=true
-spring.datasource.tomcat.validation-query=SELECT 1
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-eapp.entitymanager.packagesToScan:com.emirci.envanter
-
-
+db.url=jdbc:sqlserver://172.16.101.36;databaseName=OTS
+db.username=OTS
+db.password=Ae25SeE8
+db.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# ===============================
+# = HIBERNATE JPA SOURCE
+# ===============================
+hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+hibernate.show-sql=true
+hibernate.ddl-auto=create-drop
+entitymanager.packagesToScan:com
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+hibernate.current.session.context.class=org.springframework.orm.hibernate5.SpringSessionContext
 # ===============================
 # = Thymeleaf configurations
 # ===============================
@@ -38,13 +41,6 @@ eapp.entitymanager.packagesToScan:com.emirci.envanter
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-entitymanager.packagesToScan:com
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder
 # ==============================================================
