--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,12 +22,12 @@ db.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 # ===============================
 hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 hibernate.show-sql=true
-hibernate.ddl-auto=update
+hibernate.ddl-auto=create-drop
 entitymanager.packagesToScan:com
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
-hibernate.current.session.context.class=org.springframework.orm.hibernate4.SpringSessionContext
+#spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+hibernate.current.session.context.class=org.springframework.orm.hibernate5.SpringSessionContext
 # ===============================
 # = Thymeleaf configurations
 # ===============================
