--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,7 +22,8 @@ db.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 # ===============================
 hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 hibernate.show-sql=true
-hibernate.ddl-auto=create-drop
+hibernate.ddl-auto=update
+#none, validate, update, create, create-drop
 entitymanager.packagesToScan:com
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
