--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 server.port=7999
-app.name=Envanter Uygulaması
+app.name=Inventory App
 spring.main.banner-mode=console
 # ===============================
 # = MVC
@@ -10,6 +10,14 @@ spring.mvc.locale=tr_TR
 spring.mvc.servlet.load-on-startup=1
 spring.mvc.dispatch-options-request=true
 spring.mvc.favicon.enabled=true
+# ==============================================================
+# = Spring Security / Queries for AuthenticationManagerBuilder
+# ==============================================================
+spring.queries.users-query=select email, password, active from appUser where email=?
+spring.queries.roles-query=select u.email, r.role from appUser u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+spring.mail.default-encoding=UTF-8
+spring.messages.encoding=UTF-8
+spring.messages.basename=validation
 # ===============================
 # = DATA SOURCE
 # ===============================
@@ -39,15 +47,4 @@ hibernate.current.session.context.class=org.springframework.orm.hibernate5.Sprin
 #spring.thymeleaf.cache=false
 #spring.thymeleaf.suffix=.html
 #spring.thymeleaf.template-resolver-order=2
-# ===============================
-# = JPA / HIBERNATE
-# ===============================
-# ==============================================================
-# = Spring Security / Queries for AuthenticationManagerBuilder
-# ==============================================================
-spring.queries.users-query=select email, password, active from appUser where email=?
-spring.queries.roles-query=select u.email, r.role from appUser u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
-spring.mail.default-encoding=UTF-8
-spring.messages.encoding=UTF-8
-spring.messages.basename=validation
 #https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
