--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,15 @@
-server.port=7999
+server.port=8080
+management.security.enabled=true
+management.port=9001
+endpoints.autoconfig.enabled=true
+endpoints.autoconfig.sensitive=true
+endpoints.autoconfig.id=autoconfig
+endpoints.actuator.enabled=true
+endpoints.info.id=information
+endpoints.info.sensitive=false
+endpoints.info.enabled=true
+
+
 app.name=Envanter Uygulaması
 spring.main.banner-mode=log
 #server.jsp-servlet.class-name=org.springframework.web.servlet.DispatcherServlet
