--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.emirci.envanter</groupId>
     <artifactId>envanter</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>envanter</name>
     <description>Envanter Uygulaması</description>
@@ -99,7 +99,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <optional>true</optional>
+            <optional>false</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
         <dependency>
@@ -225,9 +229,20 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <executable>true</executable>
+
+                    <executable>false</executable>
                 </configuration>
             </plugin>
+            <!--        <plugin>
+                        <groupId>org.apache.tomcat.maven</groupId>
+                        <artifactId>tomcat-maven-plugin</artifactId>
+                        <version>2.2</version>
+                        <configuration>
+                            <url>http://172.16.101.38:8080/manager</url>
+                            <server>ws26</server>
+                            <path>/Envanter</path>
+                        </configuration>
+                    </plugin>-->
         </plugins>
     </build>
 
