--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,15 +1,31 @@
-server.port=7999
+#server.port=7999
 app.name=Inventory App
 spring.main.banner-mode=console
+spring.devtools.remote.secret=testSecret
+spring.profiles.active=development
+
 # ===============================
-# = MVC
+# = Spring boot Actutor
 # ===============================
-spring.mvc.view.prefix=classpath:/templates/
+management.security.enabled=false
+management.info.git.enabled=true
+management.info.git.mode=full
+endpoints.enabled=false
+endpoints.info.id=info
+endpoints.info.enabled=true
+endpoints.env.id=env
+endpoints.env.enabled=true
+logging.level.root=info
+# ===============================
+# = MVC classpath:/
+# ===============================
+spring.mvc.view.prefix=templates/
 spring.mvc.view.suffix=.html
 spring.mvc.locale=tr_TR
 spring.mvc.servlet.load-on-startup=1
 spring.mvc.dispatch-options-request=true
 spring.mvc.favicon.enabled=true
+
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder
 # ==============================================================
@@ -25,6 +41,17 @@ db.url=jdbc:sqlserver://172.16.101.36;databaseName=OTS
 db.username=OTS
 db.password=Ae25SeE8
 db.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+db.datasource.validation-query=select 1
+# ===============================
+# = Spring Data SOURCE
+# ===============================
+spring.datasource.url=jdbc:sqlserver://172.16.101.36;databaseName=OTS
+spring.datasource.username=OTS
+spring.datasource.password=Ae25SeE8
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.ddl-auto=update
+second.datasource.validation-query=select 1
+
 # ===============================
 # = HIBERNATE JPA SOURCE
 # ===============================
