--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,69 @@
-server.port=8080
-management.security.enabled=true
-management.port=9001
-endpoints.autoconfig.enabled=true
-endpoints.autoconfig.sensitive=true
-endpoints.autoconfig.id=autoconfig
-endpoints.actuator.enabled=true
-endpoints.info.id=information
-endpoints.info.sensitive=false
+#server.port=7999
+app.name=Inventory App
+spring.main.banner-mode=console
+spring.devtools.remote.secret=testSecret
+spring.profiles.active=production
+# ===============================
+# = Spring boot Actutor
+# ===============================
+management.security.enabled=false
+management.info.git.enabled=true
+management.info.git.mode=full
+endpoints.enabled=false
+endpoints.info.id=info
 endpoints.info.enabled=true
+endpoints.env.id=env
+endpoints.env.enabled=true
+logging.level.root=info
 
-
-app.name=Envanter Uygulaması
-spring.main.banner-mode=log
-#server.jsp-servlet.class-name=org.springframework.web.servlet.DispatcherServlet
-#server.jsp-servlet.init-parameters.*=
-#server.jsp-servlet.registered=true
 # ===============================
-# = MVC
+# = MVC classpath:/
 # ===============================
-spring.mvc.view.prefix=classpath:/templates/
+spring.mvc.view.prefix=templates/
 spring.mvc.view.suffix=.html
 spring.mvc.locale=tr_TR
 spring.mvc.servlet.load-on-startup=1
 spring.mvc.dispatch-options-request=true
 spring.mvc.favicon.enabled=true
+# ==============================================================
+# = Spring Security / Queries for AuthenticationManagerBuilder
+# ==============================================================
+spring.queries.users-query=select email, password, active from appUser where email=?
+spring.queries.roles-query=select u.email, r.role from appUser u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+spring.mail.default-encoding=UTF-8
+spring.messages.encoding=UTF-8
+spring.messages.basename=validation
+
 # ===============================
 # = DATA SOURCE
+# ===============================
+db.url=jdbc:sqlserver://172.16.101.36;databaseName=OTS
+db.username=OTS
+db.password=Ae25SeE8
+db.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+db.datasource.validation-query=select 1
+# ===============================
+# = Spring Data SOURCE
 # ===============================
 spring.datasource.url=jdbc:sqlserver://172.16.101.36;databaseName=OTS
 spring.datasource.username=OTS
 spring.datasource.password=Ae25SeE8
-spring.datasource.tomcat.test-while-idle=true
-spring.datasource.tomcat.validation-query=SELECT 1
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.ddl-auto=update
+second.datasource.validation-query=select 1
+# ===============================
+# = HIBERNATE JPA SOURCE
+# ===============================
+hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+hibernate.show-sql=true
+hibernate.ddl-auto=update
+#none, validate, update, create, create-drop
+entitymanager.packagesToScan:com
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+hibernate.current.session.context.class=org.springframework.orm.hibernate5.SpringSessionContext
+
 # ===============================
 # = Thymeleaf configurations
 # ===============================
@@ -43,20 +74,4 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #spring.thymeleaf.cache=false
 #spring.thymeleaf.suffix=.html
 #spring.thymeleaf.template-resolver-order=2
-# ===============================
-# = JPA / HIBERNATE
-# ===============================
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-# ==============================================================
-# = Spring Security / Queries for AuthenticationManagerBuilder
-# ==============================================================
-spring.queries.users-query=select email, password, active from appUser where email=?
-spring.queries.roles-query=select u.email, r.role from appUser u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
-spring.mail.default-encoding=UTF-8
-spring.messages.encoding=UTF-8
-spring.messages.basename=validation
 #https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
