October 31 Development. Final

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-#server.port=7999
+server.port=7999
 app.name=Inventory App
 spring.main.banner-mode=console
 spring.devtools.remote.secret=testSecret
@@ -16,6 +16,7 @@ endpoints.info.enabled=true
 endpoints.env.id=env
 endpoints.env.enabled=true
 logging.level.root=info
+
 # ===============================
 # = MVC classpath:/
 # ===============================
@@ -25,7 +26,6 @@ spring.mvc.locale=tr_TR
 spring.mvc.servlet.load-on-startup=1
 spring.mvc.dispatch-options-request=true
 spring.mvc.favicon.enabled=true
-
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder
 # ==============================================================
@@ -50,7 +50,8 @@ spring.datasource.username=OTS
 spring.datasource.password=Ae25SeE8
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
-second.datasource.validation-query=select 1
+spring.datasource.validation-query=select 1
+
 
 # ===============================
 # = HIBERNATE JPA SOURCE
