--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-#server.port=7999
+server.port=7999
 app.name=Inventory App
 spring.main.banner-mode=console
 spring.devtools.remote.secret=testSecret
 spring.profiles.active=production
+
 # ===============================
 # = Spring boot Actutor
 # ===============================
@@ -15,7 +16,6 @@ endpoints.info.enabled=true
 endpoints.env.id=env
 endpoints.env.enabled=true
 logging.level.root=info
-
 # ===============================
 # = MVC classpath:/
 # ===============================
@@ -50,7 +50,9 @@ spring.datasource.username=OTS
 spring.datasource.password=Ae25SeE8
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
-second.datasource.validation-query=select 1
+spring.datasource.validation-query=select 1
+
+
 # ===============================
 # = HIBERNATE JPA SOURCE
 # ===============================
