--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <artifactId>envanter</artifactId>
     <version>0.1.5</version>
     <packaging>war</packaging>
-
     <name>Envanter</name>
     <description>Envanter Uygulaması</description>
 
@@ -21,7 +20,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
+        <java.version>1.7</java.version>
         <start-class>com.emirci.envanter.EnvanterApplication</start-class>
         <primefaces.version>6.1</primefaces.version>
         <servlet.version>3.1.0</servlet.version>
@@ -95,11 +94,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-            <scope>provided</scope>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
@@ -181,28 +176,41 @@
             <artifactId>jquery</artifactId>
             <version>3.2.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
-            <scope>runtime</scope>
+            <scope>provided</scope>
         </dependency>
+
 
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+            <version>2.3</version>
+        </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
-        <!--        <dependency>
+
+        <!--
+
+        <dependency>
                     <groupId>org.hibernate</groupId>
                     <artifactId>hibernate-annotations</artifactId>
                     <version>3.5.6-Final</version>
-                </dependency>-->
+         </dependency>
+
+        -->
+
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
@@ -230,6 +238,16 @@
         <plugins>
 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <executions>
@@ -245,16 +263,20 @@
                 </configuration>
             </plugin>
 
-            <!--            <plugin>
-                            <groupId>org.apache.tomcat.maven</groupId>
-                            <artifactId>tomcat-maven-plugin</artifactId>
-                            <version>2.2</version>
-                            <configuration>
-                                <url>http://172.16.101.38:8080/manager</url>
-                                <server>ws26</server>
-                                <path>/Envanter</path>
-                            </configuration>
-                        </plugin>-->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+
+                <configuration>
+                    <url>http://ws26.osmanlireklam.com.tr:7999/manager/text</url>
+                    <server>WS26</server>
+                    <username>admin</username>
+                    <password>S32?*E5a4!</password>
+                    <path>/Envanter</path>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
